--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:rZ/RyqZ6gtfEg+RtC+CkHiuAR3uYuloJ/Tpz2O7d30U=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql-maxquin.alwaysdata.net
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=maxquin_sge
+DB_USERNAME=maxquin
+DB_PASSWORD=HolaMundo23
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
